# bets-model

./: .gitattributes  Bets pipeline.ipynb  README.md  check_best_leagues.py  config.py  data_transformer.py  datasets.py  feature_generator.py  features.py  hyperparams.py  main.py  models.py  pipeline.py  prediction.py  pyproject.toml  scorer.py  tuning.py
configs/: config.yaml  paths.py
data/: england.csv  features.yaml  france.csv  germany.csv  italy.csv  spain.csv
notebooks/: Bets pipeline.ipynb
second_model/: second_level.csv  second_level.py  second_level_data.py  second_level_model.py  second_level_params.txt  second_level_tuning.py  second_tuning.txt
src/data/: data_loaders.py  data_splits.py  data_transformers.py
src/models/: models.py
src/scorers/: scorer.py
