[tool.poetry]
name = "bets"
version = "0.1.0"
description = ""
authors = ["Ilya Isko <ilufkai2000@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.1"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
catboost = "^1.0.4"
seaborn = "^0.11.2"
optuna = "^2.10.0"
hydra-core = "^1.1.1"
tensorflow = "^2.8.0"
pandas-profiling = "^3.1.0"
jupyterlab = "^3.4.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
